overflow-x fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@ $linearwhite: linear-gradient(90deg, rgba(251,252,255,1) 0%, rgba(218,233,255,.9
 body {
   margin: 0;
   padding: 0;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 //Welcome Section
